z-index fix

--- a/public/assets/scss/layout/header/_header-3.scss
+++ b/public/assets/scss/layout/header/_header-3.scss
@@ -44,7 +44,7 @@
             }
             &.has-dark-logo{
                 & .logo{
-                    z-index: 20;
+                    
                     & .logo-light{
                         display: none;
                         
